Your commit message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="https://www.healthline.com/hlcmsresource/images/News/080516_volunteering_THUMB_LARGE.jpg" alt="volunteer">
         <!-- <button type="button" href="sign.html" >Sign up as a volunteer</button> -->
         <button>
-          <a href="volunteer.html" target="_blank">
+          <a href="https://chhawinder.github.io/HelpRight_vol/" target="_blank">
             Sign up as a volunteer
           </a>
         </button>
@@ -27,7 +27,7 @@
         <img src="https://tse2.mm.bing.net/th?id=OIP.8fNbvWuJeEvxxjbvALL2UgHaFK&pid=Api&P=0" alt="organization">
         <!-- <button type="button">Sign up as a organization</button> -->
         <button>
-          <a href="organization.html" target="_blank">
+          <a href="https://chhawinder.github.io/HelpRight_org/" target="_blank">
             Sign up as a organization
           </a>
         </button>
